--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Company Portfolio</title>
+
+    <!-- CSS File -->
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <header>
