Add ultra performance section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
 
     <title>DevoraUI Portfolio</title>
+    <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
 
@@ -142,6 +143,52 @@
           <div class="feature-item">
             <span class="check">✔</span>
             <p>Easy Lifetime Update</p>
+          </div>
+        </div>
+      </section>
+      <!-- ================= Performance ================= -->
+      <section class="performance" id="docs">
+        <div class="container">
+          <!-- LEFT -->
+          <div class="performance-text">
+            <h2>
+              Ultra <br />
+              Performance
+            </h2>
+
+            <p>
+              Inbio Page speed is so faster and takes byte times for load each
+              page. It's very easy to use, loads faster and provides better
+              performance for your website.
+            </p>
+
+            <a href="#" class="btn">View GTmetrix Report</a>
+          </div>
+
+          <!-- RIGHT -->
+          <div class="performance-scores">
+            <h3>GTmetrix Scores</h3>
+
+            <div class="score">
+              <span>PageSpeed</span>
+              <div class="bar">
+                <div class="progress" data-value="95"></div>
+              </div>
+            </div>
+
+            <div class="score">
+              <span>YSlow</span>
+              <div class="bar">
+                <div class="progress" data-value="90"></div>
+              </div>
+            </div>
+
+            <div class="score">
+              <span>1.9s Fully Loaded</span>
+              <div class="bar">
+                <div class="progress" data-value="92"></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
